--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -1,12 +1,18 @@
-.centrado{
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 122px;
-
-    background: #FF8FAB;
+body{
+    background: #C3E85A;
 }
 
+.icons-container{
+    display: grid;
+    gap: 1rem;
+    grid-auto-rows: 88px;
+    grid-template-columns: repeat(auto-fit,minmax(69px, 3fr));
+    margin: 20px;
+    
+
+}
+
+.cuadro{
+
+    background: #FFB3C6;
+}
