se modifico el backgorund y se centro el texto de los icono añadiendo un h3 con un display flex y un css properties de align-items center y justify-content center

--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -1,5 +1,5 @@
 body{
-    background: #C3E85A;
+    background: #8CB369;
 }
 
 .icons-container{
@@ -14,5 +14,14 @@ body{
 
 .cuadro{
 
-    background: #FFB3C6;
+    background: #F4A259;
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.icon-text{
+    color: #fff;
 }
