--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -25,3 +25,22 @@ body{
 .icon-text{
     color: #fff;
 }
+
+
+.displayer{
+    height: 80px;
+    background-color: #FEF7BA;
+    margin: 0 1rem 0 1rem;
+    display: flex;
+    justify-content: space-around;
+    padding: 1rem 0 1rem 0;
+    border-radius: 10px;
+   // display: flex;
+    //flex-direction: row;
+    //gap: 1rem;
+    
+}
+
+.displayer p{
+    margin: 0;
+}
