se mejoro el display de manera que sea visible la cantidad que se agrega de cada producto con ayuda de un if else y un agregado y generador de id

--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -44,3 +44,20 @@ body{
 .displayer p{
     margin: 0;
 }
+
+
+
+
+.display-compras{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+.total{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
